examples/test/testpolicy1418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1418
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key25: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value49
      podSelector:
        matchLabels:
          key21: value12
          key33: value25
          key27: value16
